--- a/app/src/main/res/layout/dialog_open_note.xml
+++ b/app/src/main/res/layout/dialog_open_note.xml
@@ -29,14 +29,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_open_note_divider"
-            android:padding="@dimen/normal_margin">
+            android:paddingStart="@dimen/normal_margin"
+            android:paddingTop="@dimen/small_margin"
+            android:paddingEnd="@dimen/normal_margin"
+            android:paddingBottom="@dimen/small_margin">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
                 android:id="@+id/dialog_open_note_new_radio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/normal_margin"
-                android:paddingBottom="@dimen/normal_margin"
                 android:text="@string/create_new_note" />
 
         </RadioGroup>
