--- a/app/src/main/res/layout/dialog_export_files.xml
+++ b/app/src/main/res/layout/dialog_export_files.xml
@@ -6,38 +6,34 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/folder_path_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/path"
-        android:textSize="@dimen/smaller_text_size" />
-
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/folder_path"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/folder_path_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/normal_margin"
-        android:paddingTop="@dimen/small_margin"
-        android:paddingEnd="@dimen/small_margin"
-        android:paddingBottom="@dimen/activity_margin" />
-
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/file_extension_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/extension"
-        android:textSize="@dimen/smaller_text_size" />
-
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/file_extension"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/medium_margin"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:inputType="text"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:hint="@string/path">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/folder_path"
+            style="@style/UnclickableEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
+
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/extension_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/extension">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/extension"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/bigger_text_size" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 </LinearLayout>
