--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -8,14 +8,24 @@
     android:paddingTop="@dimen/small_margin"
     android:paddingEnd="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/note_title"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/note_title_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium_margin"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:inputType="textCapSentences"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:hint="@string/label">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/note_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/bigger_text_size" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/new_note_type_label"
