--- a/app/src/main/res/layout/dialog_open_file.xml
+++ b/app/src/main/res/layout/dialog_open_file.xml
@@ -8,21 +8,20 @@
     android:paddingTop="@dimen/activity_margin"
     android:paddingEnd="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/open_file_filename_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/filename"
-        android:textSize="@dimen/smaller_text_size" />
-
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/open_file_filename"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/open_file_filename_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:paddingTop="@dimen/small_margin"
-        android:paddingEnd="@dimen/small_margin" />
+        android:hint="@string/path">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/open_file_filename"
+            style="@style/UnclickableEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 
     <RadioGroup
         android:id="@+id/open_file_type"
