--- a/app/src/main/res/layout/dialog_rename_note.xml
+++ b/app/src/main/res/layout/dialog_rename_note.xml
@@ -6,14 +6,21 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/note_title"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/note_title_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:inputType="textCapSentences"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:hint="@string/title">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/note_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/bigger_text_size" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 </LinearLayout>
