--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:configure="com.simplemobiletools.notes.pro.activities.WidgetConfigureActivity"
     android:initialLayout="@layout/widget"
-    android:minHeight="110dp"
-    android:minResizeHeight="40dp"
-    android:minResizeWidth="40dp"
     android:minWidth="110dp"
+    android:minHeight="110dp"
+    android:minResizeWidth="40dp"
+    android:minResizeHeight="40dp"
     android:previewImage="@drawable/img_widget_preview"
-    android:resizeMode="horizontal|vertical"/>
+    android:resizeMode="horizontal|vertical"
+    android:targetCellWidth="2"
+    android:targetCellHeight="2" />
