--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -29,7 +29,7 @@
     <item
         android:id="@+id/new_note"
         android:icon="@drawable/ic_plus_vector"
-        android:title="@string/new_note"
+        android:title="@string/create_new_note"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/rename_note"
@@ -90,6 +90,11 @@
         android:id="@+id/delete_note"
         android:icon="@drawable/ic_delete_vector"
         android:title="@string/delete_note"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/more_apps_from_us"
+        android:icon="@drawable/ic_google_play_vector"
+        android:title="@string/more_apps_from_us"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
