show more cab items at checklists

--- a/app/src/main/res/menu/cab_checklist.xml
+++ b/app/src/main/res/menu/cab_checklist.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AppCompatResource,AlwaysShowAction">
     <item
         android:id="@+id/cab_move_to_top"
         android:icon="@drawable/ic_move_to_top_vector"
+        android:showAsAction="always"
         android:title="@string/move_to_top"
         app:showAsAction="always" />
     <item
         android:id="@+id/cab_move_to_bottom"
         android:icon="@drawable/ic_move_to_bottom_vector"
+        android:showAsAction="always"
         android:title="@string/move_to_bottom"
         app:showAsAction="always" />
     <item
         android:id="@+id/cab_rename"
         android:icon="@drawable/ic_rename_vector"
+        android:showAsAction="always"
         android:title="@string/rename"
         app:showAsAction="always" />
     <item
         android:id="@+id/cab_delete"
         android:icon="@drawable/ic_delete_vector"
+        android:showAsAction="always"
         android:title="@string/delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
