--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -1,3 +1,3 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="108dp" android:height="108dp" android:viewportWidth="108" android:viewportHeight="108">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M71.39 43.41L60.19 32.3H37.81v40.72H71.3V43.41zm-1.64 0h-9.56v-9.47zm-26.09-1.64v-1.12h15.41v2.24H43.66zm9.82 24.71h-9.81v-2.24h9.81zm12.05-7.06v1.12H43.66V58.3h21.87zm0-5.85v1.12H43.66v-2.24h21.87zm0-5.86v1.12H43.66v-2.24h21.87z"/>
+    <path android:pathData="M70.79 44.75l-11.2-11.11H37.21v40.72H70.7V44.75zm-1.64 0h-9.56v-9.47zm-26.09-1.64v-1.12h15.41v2.24H43.06zm9.82 24.71h-9.81v-2.24h9.81zm12.05-7.06v1.12H43.06v-2.24h21.87zm0-5.85v1.12H43.06v-2.24h21.87zm0-5.86v1.12H43.06v-2.24h21.87z" android:fillColor="#FFFFFFFF"/>
 </vector>
