do not ever show More Apps From Us as an icon

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -92,11 +92,6 @@
         android:title="@string/delete_note"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/more_apps_from_us"
-        android:icon="@drawable/ic_google_play_vector"
-        android:title="@string/more_apps_from_us"
-        app:showAsAction="ifRoom" />
-    <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings_cog_vector"
         android:title="@string/settings"
@@ -106,4 +101,8 @@
         android:icon="@drawable/ic_info_vector"
         android:title="@string/about"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/more_apps_from_us"
+        android:title="@string/more_apps_from_us"
+        app:showAsAction="never" />
 </menu>
