Allow exporting locked notes

--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -17,7 +17,7 @@
         android:hint="@string/label">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/note_title"
+            android:id="@+id/locked_note_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
