--- a/app/src/main/res/layout/dialog_rename_note.xml
+++ b/app/src/main/res/layout/dialog_rename_note.xml
@@ -14,7 +14,7 @@
         android:hint="@string/title">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/note_title"
+            android:id="@+id/locked_note_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
