--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="checklist_image_size">56dp</dimen>
+    <dimen name="grid_note_item_width">150dp</dimen>
+    <dimen name="grid_note_item_max_height">300dp</dimen>
 </resources>
