--- a/app/src/main/res/layout/dialog_open_note.xml
+++ b/app/src/main/res/layout/dialog_open_note.xml
@@ -1,45 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_open_note_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.simplemobiletools.commons.views.MyRecyclerView
-        android:id="@+id/dialog_open_note_list"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/dialog_open_note_divider"
-        android:layout_alignParentTop="true"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="@dimen/small_margin"
         android:layout_marginTop="@dimen/medium_margin"
         android:layout_marginEnd="@dimen/small_margin"
-        tools:itemCount="2"
-        tools:listitem="@layout/open_note_item" />
+        app:layout_constraintHeight_max="500dp">
+        <com.simplemobiletools.commons.views.MyRecyclerView
+            android:id="@+id/dialog_open_note_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:itemCount="10"
+            tools:listitem="@layout/open_note_item" />
+    </androidx.core.widget.NestedScrollView>
 
     <ImageView
         android:id="@+id/dialog_open_note_divider"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_above="@+id/dialog_open_note_create_new"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/divider_grey"
         android:importantForAccessibility="no" />
 
-    <RadioGroup
-        android:id="@+id/dialog_open_note_create_new"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:paddingStart="@dimen/normal_margin"
-        android:paddingTop="@dimen/small_margin"
-        android:paddingEnd="@dimen/normal_margin"
-        android:paddingBottom="@dimen/small_margin">
-
-        <com.simplemobiletools.commons.views.MyCompatRadioButton
-            android:id="@+id/dialog_open_note_new_radio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/create_new_note" />
-
-    </RadioGroup>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
