--- a/app/src/main/res/layout/open_note_item.xml
+++ b/app/src/main/res/layout/open_note_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:lines="1"
+        android:maxLines="2"
         android:textSize="@dimen/big_text_size"
         android:textStyle="bold"
         tools:text="Title" />
