--- a/app/src/main/res/layout/open_new_note_item.xml
+++ b/app/src/main/res/layout/open_new_note_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/open_note_item_holder"
+    android:id="@+id/open_new_note_item_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/medium_margin"
@@ -10,22 +9,23 @@
     android:padding="@dimen/normal_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/open_note_item_title"
+        android:id="@+id/open_new_note_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:lines="1"
+        android:maxLines="2"
         android:textSize="@dimen/big_text_size"
         android:textStyle="bold"
-        tools:text="Title" />
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/create_new_note" />
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/open_note_item_text"
+    <ImageView
+        android:id="@+id/open_new_note_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_margin"
-        android:ellipsize="end"
-        android:maxHeight="@dimen/grid_note_item_max_height"
-        tools:text="text" />
+        android:src="@drawable/ic_plus_vector"
+        android:layout_gravity="center"
+        android:importantForAccessibility="no" />
 
 </LinearLayout>
